--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@ body{
     <h1>Hello WORLD</h1>
 
 
-    <p> wow look at this </p>
+    <p> WELCOME TO MY WEBSITE</p>
     <p>
-        <a href="https://www.google.co.uk">WE MAY THINK</a> 
+        <a href=""> </a> 
     </p>
 
     <p> 
-        <img src="https://cdn.britannica.com/00/188300-050-972ACBFB/Dolomites-Italian-Alps.jpg" alt="">
+        <img src="" alt="">
     </p>
 
 
