--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 body{
     background-color: rgb(127, 127, 83);
 }
+h1 {text-align: center;}
+h1 {text-align: center;}
    </style>
 
 </head>
 <body>
-    <h1>Hello WORLD</h1>
-
-
-    <p> WELCOME TO MY WEBSITE</p>
+    <h1>HELLO WORLD</h1>
+    <p style="font-family:verdana"> Welcome To My Website!</p>
+    
     <p>
         <a href=""> </a> 
     </p>
