--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ body{
     background-color: rgb(127, 127, 83);
 }
 h1 {text-align: center;}
-h1 {text-align: center;}
+
    </style>
 
 </head>
 <body>
-    <h1>HELLO WORLD</h1>
+    <h1 style="font-size: 80px;">HELLO WORLD</h1>
     <p style="font-family:verdana"> Welcome To My Website!</p>
     
     <p>
