--- a/index.html
+++ b/index.html
@@ -15,17 +15,9 @@ h1 {text-align: center;}
 
 </head>
 <body>
-    <h1 style="font-size: 80px;">HELLO WORLD</h1>
-    <p style="font-family:verdana"> Welcome To My Website!</p>
+    <h1 style="font-size: 80px; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">HELLO WORLD</h1>
+    <p style="font-family:'Courier New', Courier, monospace; font-size: 30px"> Welcome To My Website!</p>
     
-    <p>
-        <a href=""> </a> 
-    </p>
-
-    <p> 
-        <img src="" alt="">
-    </p>
-
 
 
 </body>
