--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@ h1 {text-align: center;}
 
 </head>
 <body>
-    <h1 style="font-size: 80px; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">HELLO WORLD</h1>
-    <p style="font-family:'Courier New', Courier, monospace; font-size: 30px"> Welcome To My Website!</p>
+    <h1 style="font-size: 90px; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: antiquewhite;">
+        HELLO WORLD: FASHION
+    </h1>
+   
+    <p style="font-family:'Courier New', Courier, monospace; font-size: 25px;color: antiquewhite;"> 
+        Welcome To My Website!
+    </p>
     
+
 
 
 </body>
