--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@ h1 {text-align: center;}
 
 </head>
 <body>
-    <h1 style="font-size: 90px; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; color: antiquewhite;">
+    <h1 style="font-size: 90px; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    color: antiquewhite;">
+
         HELLO WORLD: FASHION
     </h1>
    
-    <p style="font-family:'Courier New', Courier, monospace; font-size: 25px;color: antiquewhite;"> 
+    <p style="font-family:'Courier New', Courier, monospace; font-size: 30px;color: antiquewhite;"> 
         Welcome To My Website!
     </p>
     
+    <p>
+        <img src="https://pin.it/G013mLH6D" alt="outfit1">
+    </p> 
+
 
 
 
