--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ h1 {text-align: center;}
     </p>
     
     <p>
-        <img src="https://pin.it/G013mLH6D" alt="outfit1">
+        <img src="image/Cardigan no 7.jpg" alt="">
     </p> 
 
 
