--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@ h1 {text-align: center;}
     </p>
     
     <p>
-        <img src="image/Cardigan no 7.jpg" alt="">
+        <img src="image/Cardigan no 7.jpg" alt="" style="height: 600px;">
     </p> 
+    <p>
+        <img src="image/bag_check.jpg" alt="" style="height: 600px;">
+    </p> 
+
 
 
 
