--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ h1 {text-align: center;}
     </h1>
    
     <p style="font-family:'Courier New', Courier, monospace; font-size: 30px;color: antiquewhite;"> 
-        Welcome To My Website!
+        Welcome To My Website! This is a collection of things that I want to make (:
     </p>
     
     <p>
@@ -31,7 +31,13 @@ h1 {text-align: center;}
     <p>
         <img src="image/bag_check.jpg" alt="" style="height: 600px;">
     </p> 
+    <p>
+        <img src="image/shirt.jpg" alt="" style="height: 600px;">
+    </p> 
 
+    <p>
+        <img src="image/" alt="" style="height: 600px;">
+    </p> 
 
 
 
