--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ h1 {text-align: center;}
     <h1 style="font-size: 90px; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
     color: antiquewhite;">
 
-        HELLO WORLD: FASHION
+        HELLO WORLD: HANDMADE
+
     </h1>
    
     <p style="font-family:'Courier New', Courier, monospace; font-size: 30px;color: antiquewhite;"> 
@@ -36,7 +37,7 @@ h1 {text-align: center;}
     </p> 
 
     <p>
-        <img src="image/" alt="" style="height: 600px;">
+        <img src="image/top.jpeg" alt="" style="height: 600px;">
     </p> 
 
 
