--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
    <style>
    
 body{
-    background-color: rgb(127, 127, 83);
+    background-color: #e5e5f7;
+opacity: 0.8;
+background-image: radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
+background-size: 10px 10px;
 }
 h1 {text-align: center;}
 
@@ -16,11 +19,11 @@ h1 {text-align: center;}
 </head>
 <body>
     <h1 style="font-size: 90px; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
-    color: antiquewhite;">
+    color: rgb(33, 51, 250);">
         HELLO WORLD: HANDMADE
     </h1>
    
-    <p style="font-family:'Courier New', Courier, monospace; font-size: 30px;color: antiquewhite;"> 
+    <p style="font-family:'Courier New', Courier, monospace; font-size: 30px;color: rgb(21, 56, 255);"> 
         Welcome To My Website! This is a collection of things that I want to make (:
     </p>
     
